syntax = "proto3";
package protos;

option go_package='./pb';

service Auth{
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Signup(SignupRequest) returns (SignupResponse);
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    bool status = 1;
    string msg = 2;
    optional Tokens  data = 3;
    optional Errors  errors = 4;
}
message SignupRequest{
    string firstName = 1;
    optional string lastName = 2;
    string email = 3;
    string password = 4;
}
message SignupResponse{
    bool status = 1;
    string msg = 2;
    optional Tokens  data = 3;
    optional Errors  errors = 4;
}

message Tokens{
    string accessToken = 1;
    string refreshToken = 2;
    string uid = 3;
}
message SingleValidationError{
    optional string field = 1;
    optional string tag = 2;
    optional string value = 3;
}
message Errors{
    repeated SingleValidationError errors = 1;
}
